Expand-Collapse and Remove/Add Widget with CSS fixes

--- a/index.css
+++ b/index.css
@@ -37,3 +37,56 @@ th {
 .table-container {
   padding-bottom: 20px;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+}
+.layout-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  transition: all 0.5s ease;
+}
+
+.layout-container.expanded {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+  padding-bottom: 25px;
+}
+
+.layout-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  padding: 5px 10px;
+  position: relative;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px;
+  text-align: center;
+  border-radius: 50%;
+  background: transparent;
+  color: #767777;
+  transition: background-color 0.3s;
+}
+
+.icon:hover {
+  background-color: rgba(255, 255, 255, 0.08);
+}
+
+#tv-attr-logo {
+  display: none !important;
+}
